# tts

./: .env.example  .gitignore  NEXT_STEPS.md  README.md  USAGE.md  VOICES.md  cabal.project  package.yaml  piper-reader.cabal  stack.yaml
app/: Main.hs
src/: CLI.hs  Config.hs
src/Content/: Fetch.hs  File.hs  Parser.hs
src/TTS/: Piper.hs  Types.hs
